--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="w drum" onclick="playSound('crash')">w</button>
+    <button class="a drum" onclick="playSound('kick-bass')">a</button>
+    <button class="s drum" onclick="playSound('snare')">s</button>
+    <button class="d drum" onclick="playSound('tom-1')">d</button>
+    <button class="j drum" onclick="playSound('tom-2')">j</button>
+    <button class="k drum" onclick="playSound('tom-3')">k</button>
+    <button class="l drum" onclick="playSound('tom-4')">l</button>
   </div>
 
 
   <footer>
-    Made with ❤ by Krish Patel
+    Made with ❤ by Krish Patel with help from Harsh Parekh
   </footer>
   <script src="index.js"></script>
 </body>
